mod user total frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,18 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "chartist": "^0.11.0",
+    "email-validator": "^2.0.4",
     "es6-promise": "^4.2.4",
     "moment": "^2.29.1",
+    "node-pre-gyp": "^0.17.0",
+    "password-validator": "^5.1.1",
     "portfinder": "^1.0.21",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.1.0",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
