--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "chartist": "^0.11.0",
     "email-validator": "^2.0.4",
     "es6-promise": "^4.2.4",
+    "mdbvue": "^6.7.2",
     "moment": "^2.29.1",
     "node-pre-gyp": "^0.17.0",
     "password-validator": "^5.1.1",
