--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,15 @@ mybatis.config-location=classpath:/mybatis/mybatisConfig.xml
 
 #servlet
 server.servlet.session.timeout=60
+
+#AWS
+cloud.aws.credentials.accessKey=AKIAW6HKVCPW6XNB4MN4
+cloud.aws.credentials.secretKey=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
+cloud.aws.stack.auto=false
+
+# AWS S3 Service bucket
+cloud.aws.s3.bucket=griumbucket
+cloud.aws.region.static=ap-northeast-2
+
+# AWS S3 Bucket URL
+cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/griumbucket
