--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -101,6 +101,12 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.327</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.901</version>
+        </dependency>
 
 		<!-- 파일 업로드 -->
 		<dependency>
