--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "chartist": "^0.11.0",
+    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "es6-promise": "^4.2.4",
     "mdbvue": "^6.7.2",
