--- a/backend/.classpath
+++ b/backend/.classpath
@@ -20,7 +20,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -29,25 +28,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="target/generated-sources/annotations">
-		<attributes>
-			<attribute name="ignore_optional_problems" value="true"/>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="m2e-apt" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
-		<attributes>
-			<attribute name="ignore_optional_problems" value="true"/>
-			<attribute name="test" value="true"/>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="m2e-apt" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/multicampus/Downloads/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/multicampus/Downloads/US_export_policy.jar"/>
-	<classpathentry kind="lib" path="C:/Users/multicampus/Downloads/local_policy.jar"/>
+	<classpathentry kind="lib" path="C:/SSAFY/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/SSAFY/local_policy.jar"/>
+	<classpathentry kind="lib" path="C:/SSAFY/US_export_policy.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
