--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "portfinder": "^1.0.28",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.1.0",
+    "vue-moment": "^4.1.0",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
