--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "vue-moment": "^4.1.0",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.4.4",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
